# Initial-D-VFS-Headers

./: CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  TODO.md  build.sh  doc.txt  version.yaml  versionBump.py
cobol/: app.cbl
debian/: changelog  control  copyright.txt
headers/: ANA.hpp  XBB.hpp  extractANA.hpp  extractXBB.hpp  hashtools.hpp  typeCheck.hpp
java/: Installer.java
lua/: processor.lua
source/: assembly.S  extractANA.cpp  extractXBB.cpp  typeCheck.cpp  xor.S
